Fix more display issues on Safari/iOS

--- a/src/_typography.css
+++ b/src/_typography.css
@@ -46,54 +46,53 @@ h6 { text-transform: uppercase; }
 .ul {
   display: inline;
   background-repeat: repeat-x;
-  background-position: 0 1.1em;
-  background-size: 100%;
+  background-size: 100% 15%;
 }
 
 /* Underline types */
 .ul-bg {
-  background-position: 0 0.28em;
+  background-size: 100% 85%;
   padding-right: .25em;
   padding-left: .05em;
 }
-a.ul {
+.ul-link {
   text-decoration: none;
   transition: all ease-in-out .05s;
 }
 
 /* Underline colors */
-.ul-pewter { background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='116' height='116' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%2391B1A7' fill-rule='evenodd'/%3e%3c/svg%3e"); }
-a.ul-pewter {
+.ul-pewter { background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='100' height='5' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%2391B1A7' fill-rule='evenodd'/%3e%3c/svg%3e"); }
+.ul-link.ul-pewter {
   &:hover,
   &:focus {
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg class='' width='116' height='116' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23398c72' fill-rule='evenodd'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg class='' width='100' height='5' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23398c72' fill-rule='evenodd'/%3e%3c/svg%3e");
   }
 }
-.ul-whale { background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='116' height='116' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23083549' fill-rule='evenodd'/%3e%3c/svg%3e"); }
-a.ul-whale {
+.ul-whale { background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='100' height='5' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23083549' fill-rule='evenodd'/%3e%3c/svg%3e"); }
+.ul-link.ul-whale {
   &:hover,
   &:focus {
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg class='' width='116' height='116' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%2359b0d8' fill-rule='evenodd'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='100' height='5' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%2359b0d8' fill-rule='evenodd'/%3e%3c/svg%3e");
   }
 }
-.ul-baltic { background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='116' height='116' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%233E3E3F' fill-rule='evenodd'/%3e%3c/svg%3e"); }
-a.ul-baltic {
+.ul-baltic { background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='100' height='5' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%233E3E3F' fill-rule='evenodd'/%3e%3c/svg%3e"); }
+.ul-link.ul-baltic {
   &:hover,
   &:focus {
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg class='' width='116' height='116' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23afafaf' fill-rule='evenodd'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='100' height='5' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23afafaf' fill-rule='evenodd'/%3e%3c/svg%3e");
   }
 }
-.ul-seashell { background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='116' height='116' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23E6E6E6' fill-rule='evenodd'/%3e%3c/svg%3e"); }
-a.ul-seashell {
+.ul-seashell { background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='100' height='5' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23E6E6E6' fill-rule='evenodd'/%3e%3c/svg%3e"); }
+.ul-link.ul-seashell {
   &:hover,
   &:focus {
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg class='' width='116' height='116' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%238f8f8f' fill-rule='evenodd'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='100' height='5' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%238f8f8f' fill-rule='evenodd'/%3e%3c/svg%3e");
   }
 }
-.ul-sunglow { background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='116' height='116' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23FBD057' fill-rule='evenodd'/%3e%3c/svg%3e"); }
-a.ul-sunglow {
+.ul-sunglow { background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='100' height='5' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23FBD057' fill-rule='evenodd'/%3e%3c/svg%3e"); }
+.ul-link.ul-sunglow {
   &:hover,
   &:focus {
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg class='' width='116' height='116' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23d08a11' fill-rule='evenodd'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='100' height='5' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 0h116v116H0z' fill='%23d08a11' fill-rule='evenodd'/%3e%3c/svg%3e");
   }
 }
